@@ -1,3 +1,8 @@
+1998-11-13  Tanaka Akira  <akr@jaist.ac.jp>
+
+	* mel-b-ccl.el (mel-ccl-decode-b): Use `define-ccl-program'
+	instead of `define-long-ccl-program'.
+
 1998-11-12  Tanaka Akira  <akr@jaist.ac.jp>
 
 	* FLIM-ELS: (flim-modules): Install mel-b-ccl.el for
